force-app/main/default/objects/CVRD_DS_Ledger_Account_Detail__mdt/CVRD_DS_Ledger_Account_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Ledger Account Detail</label>
    <pluralLabel>Ledger Accounts Detail</pluralLabel>
</CustomObject>