force-app/main/default/objects/CVRD_DS_Ledger_Account_Detail__mdt/fields/CVRD_DS_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Type__c</fullName>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development_Permit</fullName>
            </value>
            <value>
                <fullName>Development_Variance_Permit</fullName>
            </value>
            <value>
                <fullName>OCP_Zoning_or_Land_Use_Bylaw_Amendment</fullName>
            </value>
            <value>
                <fullName>Covenant_Amendment/Discharge</fullName>
            </value>
            <value>
                <fullName>Temporary_Use_Permit</fullName>
            </value>
            <value>
                <fullName>Flood_Management_Bylaw_Exemption</fullName>
            </value>
            <value>
                <fullName>Minimum_Frontage_Exception</fullName>
            </value>
            <value>
                <fullName>Phased_Development_Agreement</fullName>
            </value>
            <value>
                <fullName>Board_of_Variance</fullName>
            </value>
            <value>
                <fullName>Strata_Conversion</fullName>
            </value>
            <value>
                <fullName>Agricultural_Land_Reserve</fullName>
            </value>
            <value>
                <fullName>Subdivision_Referral</fullName>
            </value>
            <value>
                <fullName>Crown_Land_Referrals</fullName>
            </value>
            <value>
                <fullName>Telecommunication_Antenna_Structure</fullName>
            </value>
            <value>
                <fullName>Cannabis Retail Licence</fullName>
            </value>
            <value>
                <fullName>Liquor Licence Referrals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>