force-app/main/default/objects/CVRD_DS_Ledger_Account_Detail__mdt/fields/CVRD_DS_Cash_Ledger_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Cash_Ledger_Account_Number__c</fullName>
    <label>Cash Ledger Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>